--- a/webapp/views/pgprocess.ejs
+++ b/webapp/views/pgprocess.ejs
@@ -1,1 +1,10 @@
-<p>This is the pgprocess tab</p>
+
+<%- include ("partials/header.ejs") %>
+<div class="container">
+    <blockquote class="blockquote">
+        <h1>Pipeline Generation Process</h1>
+        <p> Pipeline generation, also known as lead generation, is the process of building and maintaining a sales pipeline of potential leads interested in buying your product or service.
+        The goal is simple: to nurture these interested folks so that they decide to buy from you and ultimately, drive revenue. </p>
+    </blockquote>
+</div>
+<%- include('partials/footer.ejs') %>
